fix(theme-default): z-index event modal

--- a/packages/theme-default/src/components/calendar/event-modal/wrapper.scss
+++ b/packages/theme-default/src/components/calendar/event-modal/wrapper.scss
@@ -7,7 +7,7 @@
   max-width: 100%;
   height: fit-content;
   background-color: var(--sx-color-background);
-  z-index: 1;
+  z-index: 2;
 
   &.is-open {
     animation: slide-sideways;
